# edu-video-recommender

./: .dockerignore  .env  .gitignore  .railwayignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  celery_app.py  config.py  gitignore  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  requirements_embedder.txt  run_project.bat  start_celery.sh  test_vector_logic.py  vercel.json
.cursor/rules/: founder-rule.mdc
.github/workflows/: ci.yml  python-validation.yml
alembic/: env.py
alembic/versions/: a7495d878893_initial_schema_with_video_usersearch_.py
backend/: app.py  auth.py  client.py  database.py  models.py  wsgi.py
backend/schemas/: __init__.py
frontend/: auth.html  auth.js  project.css  project.html  project.js  results.html  results.js  video.html
scraper/: background_scraper.py  clean_shorts.py  db.py  dynamic_queries.py  semantic_search.py  semantic_utils.py  tasks.py  trigger_scrape.py  youtube_scraper.py
tests/: conftest.py  test_api_health.py  test_api_recommend.py  test_auth_cookies.py  test_interactions.py  test_sanity.py  test_vector_logic.py
